--- a/AgroAssit/frontend/src/style.css
+++ b/AgroAssit/frontend/src/style.css
@@ -110,4 +110,66 @@ display: inline-flex}
     font-weight: 600; 
     word-wrap: break-word
   }
+
+  .Header1{
+    width: 100%; 
+    height: 100%; 
+    justify-content: flex-start; 
+    align-items: center; 
+    gap: 15px; 
+    display: inline-flex;
+  }
+
+  .Header2{
+    width: 30px; 
+    height: 30px; 
+    justify-content: center; 
+    align-items: center; 
+    display: flex
+  }
+
+  .HeaderImage{
+    width: 30px; 
+    height: 30px; 
+    background: linear-gradient(0deg, #D9D9D9 0%, #D9D9D9 100%); 
+    border-radius: 9999px
+  }
+  .HeaderText{
+    color: #1E1E1E; 
+    font-size: 15px; 
+    font-family: Montserrat;
+     font-weight: 600;
+      word-wrap: break-word
+  }
   
+  .Welcome1Frame{
+    display: flex;
+    width: 329px;
+    padding: 20px 30px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+
+    border-radius: 10px;
+    border: 1px solid #DDD;
+    background: rgba(255, 255, 255, 0.50);
+
+
+    backdrop-filter: blur(calc(var(--sds-size-blur-100) / 2));
+  }
+
+  .WelcomeText{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    align-self: stretch;
+    color: #000;
+    text-align: center;
+    font-family: Montserrat;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+  }
